[gd_scene load_steps=11 format=3 uid="uid://bod1vwf5i8ehi"]

[ext_resource type="Texture2D" uid="uid://uf3j1cltxl2j" path="res://Recursos/fundoBranco.png" id="1_acjq2"]
[ext_resource type="Script" path="res://Script/Tela_Perfil.gd" id="1_sklaj"]
[ext_resource type="PackedScene" uid="uid://bdskk0aw2cqem" path="res://Tela/Menus/MenuH.tscn" id="2_i6y42"]
[ext_resource type="Texture2D" uid="uid://cu5teoohs387o" path="res://Recursos/Perfil/Foto_padrão.png" id="4_0ttk2"]
[ext_resource type="Texture2D" uid="uid://c3t6w7v11kmb5" path="res://Recursos/Perfil/Moldura.png" id="5_0ofhh"]
[ext_resource type="FontFile" uid="uid://b2ollwwqaf816" path="res://Recursos/Fontes/Poppins/Poppins-Bold.ttf" id="6_ik0l0"]
[ext_resource type="Texture2D" uid="uid://ema6mc1n02h3" path="res://Recursos/Botão/Agenda.png" id="7_j1jat"]
[ext_resource type="Texture2D" uid="uid://ddryoih716jc5" path="res://Recursos/Botão/Remedios salvos.png" id="8_8lbw0"]
[ext_resource type="Texture2D" uid="uid://cyuajc077ruep" path="res://Recursos/Botão/Logout.png" id="9_s6oi8"]
[ext_resource type="Texture2D" uid="uid://bi1ocmt6bbeia" path="res://Recursos/Botão/engrenagemConfig.png" id="10_1p54b"]

[node name="TelaPerfil" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sklaj")
metadata/_edit_lock_ = true

[node name="FundoBranco" type="Sprite2D" parent="."]
z_index = -2
texture = ExtResource("1_acjq2")
centered = false
metadata/_edit_lock_ = true

[node name="MenuH" parent="." instance=ExtResource("2_i6y42")]
offset_top = 1712.0
offset_bottom = 1712.0
metadata/_edit_lock_ = true

[node name="FotoPadrão" type="Sprite2D" parent="."]
position = Vector2(544, 512)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_0ttk2")

[node name="Moldura" type="Sprite2D" parent="."]
position = Vector2(547, 510.5)
scale = Vector2(2.69, 2.785)
texture = ExtResource("5_0ofhh")

[node name="Botão Voltar" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0592593
anchor_top = -0.0833333
anchor_right = 0.012037
anchor_bottom = -0.0833333
offset_left = 208.0
offset_top = 272.0
offset_right = 244.0
offset_bottom = 351.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_ik0l0")
theme_override_font_sizes/font_size = 50
text = "   <    "
flat = true
metadata/_edit_use_anchors_ = true

[node name="Label-Login" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2875
anchor_bottom = 0.2875
offset_left = 8.0
offset_top = 208.0
offset_right = 1088.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_ik0l0")
theme_override_font_sizes/font_size = 50
text = "Nome do usuario"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="BotaoAgenda" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 1192.0
offset_right = 903.0
offset_bottom = 1345.0
texture_normal = ExtResource("7_j1jat")

[node name="BotaoRemediosSalvos" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 278.0
offset_top = 1024.0
offset_right = 900.0
offset_bottom = 1152.0
texture_normal = ExtResource("8_8lbw0")

[node name="BotaoLogout" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 278.0
offset_top = 1392.0
offset_right = 901.0
offset_bottom = 1536.0
texture_normal = ExtResource("9_s6oi8")

[node name="BotaoConfig" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 840.0
offset_top = 72.0
offset_right = 959.0
offset_bottom = 184.0
texture_normal = ExtResource("10_1p54b")
stretch_mode = 0

[connection signal="pressed" from="Botão Voltar" to="." method="_on_botão_voltar_pressed"]
[connection signal="pressed" from="BotaoConfig" to="." method="_on_botao_config_pressed"]
